public/css/style.css
/* Space out content a bit */
html {
  height: 100%;
}

body {
  padding-top: 20px;
  padding-bottom: 20px;
  background-image: url("https://images.pexels.com/photos/187364/pexels-photo-187364.jpeg?w=1260&h=750&dpr=3&auto=compress&cs=tinysrgb");
  background-size: cover;
  background-position: center;
}

/* body:before {
  content: "";
  display: block;
  height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
  background-color: rgba(0, 0, 0, .25);
  z-index: 0;
} */

.nav > li > a {
  color: #fff;
}
/* Everything but the jumbotron gets side spacing for mobile first views */
.header,
.marketing,
.footer {
  padding-right: 15px;
  padding-left: 15px;
}

/* Custom page header */
.header {
  padding-bottom: 20px;
  border-bottom: 1px solid #e5e5e5;
}
/* Make the masthead heading the same height as the navigation */
.header h1 {
  margin-top: 0;
  margin-bottom: 0;
  line-height: 40px;
  color: #fff
}

/* Custom page footer */
.footer {
  padding-top: 19px;
  color: #fff;
  border-top: 1px solid #e5e5e5;
}

/* Customize container */
@media (min-width: 768px) {
  .container {
    max-width: 730px;
  }
}
.container-narrow > hr {
  margin: 30px 0;
}

/* Main marketing message and sign up button */
.jumbotron {
  text-align: center;
  border-bottom: 1px solid #e5e5e5;
}
.jumbotron .btn {
  padding: 14px 24px;
  font-size: 21px;
}

/* Supporting marketing content */
.marketing {
  margin: 40px 0;
}
.marketing p + h4 {
  margin-top: 28px;
}

/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {
  /* Remove the padding we set earlier */
  .header,
  .marketing,
  .footer {
    padding-right: 0;
    padding-left: 0;
  }
  /* Space out the masthead */
  .header {
    margin-bottom: 30px;
  }
  /* Remove the bottom border on the jumbotron for visual effect */
  .jumbotron {
    border-bottom: 0;
  }
}

h2, .h2 {
  margin-top:0;
  color: #fff;
}

footer{
  margin-top:40px;
}

h1 {
  text-align: left;
  color: #fff;
}

label {
  color: #fff;
  font-size: 1.0em;
}

/* .form-check-inline label {
  font-size: 1.0em;
} */

 .custom-select {
   width: 100%;
   padding: 7px;
}

option {
  text-align: center;
  letter-spacing: .5px;
}

small {
  color: #fff;
  text-align: center;
}

.buttonDash .btn-primary {
  margin-top: 24px;
}

/* .buttonPro .btn-primary {
  float: right;
} */



.li .btn-lg {
  width: 15px;
}

#patientName {
  width: 100%;
  height: 32px;
}

.made-patient-list {
  margin-top: 25px;
  list-style: none;
}

.medList {
  margin-top: 25px;
  list-style: none;
}

.medList li {
  margin-top: 5px;
}

.timeList {
  margin-top: 25px;
  list-style: none;
  margin-left: -40px;
}

.timeList li {
  margin-top: 5px;
}

.nav > li > a:hover, .nav > li > a:focus {
  text-decoration: none;
  background-color: #fff;
  color: #337ab7;
}

#medAdd {
  width: 173px;
}

.medAdd {
  margin: -3px 0px 5px -68px;
}

.btn-add-time {
  margin-top: 25px;
}

.med-list-button {
  width: 255px;
}

